--- a/python/app/cmodel/step_id.yml
+++ b/python/app/cmodel/step_id.yml
@@ -3,10 +3,11 @@ Rigging: 135
 CFX: 143
 EFX: 142
 Shading: 15
-Crowds: 9999
+#Crowds: 9999
 KeyLight: 144
 Preshot: 134
 Groom: 138
 Animation: 106
 Layout: 35
 Light: 7
+LightRig: 150
